# BigDecimal2

./: CMakeLists.txt
src/: BigDecimal.cpp  BigDecimal.hpp  operations.cpp  operations.hpp
tests/: tests_BigDecimal.cpp
